[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://Pictures/Bg.png" type="Texture" id=2]
[ext_resource path="res://Pictures/Logo.png" type="Texture" id=3]
[ext_resource path="res://Pictures/GameOver.png" type="Texture" id=4]
[ext_resource path="res://Sound/Voice/DontCall.wav" type="AudioStream" id=5]

[sub_resource type="Theme" id=1]


[node name="GameOver" type="Node2D"]
script = ExtResource( 1 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 384.446, 215.844 )
texture = ExtResource( 2 )

[node name="Menu" type="Button" parent="."]
margin_left = 566.081
margin_top = 280.19
margin_right = 725.081
margin_bottom = 333.19
text = "Main Menu"

[node name="Quit" type="Button" parent="."]
margin_left = 566.895
margin_top = 355.124
margin_right = 725.895
margin_bottom = 408.124
text = "Quit"

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 642.889, 123.397 )
scale = Vector2( 0.51165, 0.51165 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 70.8619, 84.7085 )
scale = Vector2( 3, 3 )

[node name="Score" type="Label" parent="Sprite2"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 11.6746
margin_top = 18.1906
margin_right = 124.675
margin_bottom = 49.1906
theme = SubResource( 1 )
text = "Game Over
Your final score is"
align = 1

[node name="GameOver" type="Sprite" parent="."]
position = Vector2( 268.986, 86.3528 )
texture = ExtResource( 4 )

[node name="DontCall" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 391.809, 250.867 )
stream = ExtResource( 5 )

[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
